# wizard-ops

./: .dockerignore  .gcloudignore  .gitignore  Makefile  README.md  checkpoints.dvc  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  cloudbuild-serve.yaml  cloudbuild-train-vertex.yaml  cloudbuild-train.yaml  cloudbuild.yaml  data.nosync.dvc  deploy_api.sh  deploy_front.sh  gen_requirements.sh  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  setup_triggers.sh  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: build_deploy_gcp.yaml  deploy_gcp.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml
configs/: __init__.py  config.yaml
configs/metadata/: README.md  data_stats.csv  dish_metadata_A.csv  dish_metadata_A.parquet  normalisation_stats.json
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile  train_entrypoint.sh
docs/: deployment.md  mkdocs.yaml
docs/source/: index.md
reports/: README.md  report.html
scripts/: preprocess_images.py
src/wizard_ops/: __init__.py  api.py  cli.py  data-cli.py  data.py  data_cli.py  dev.md  evaluate.py  evaluate_test_sample.py  example_model.py  hydra_app.py  model.py  sample_model.py  train.py  train_wandb.py
src/wizard_ops/backend/: api.py  pyproject.toml
src/wizard_ops/conf/: config.yaml
src/wizard_ops/frontend/: frontend.py  pyproject.toml
src/wizard_ops/metadata/: dish_metadata_D.csv
src/wizard_ops/processed_data/: dish_mapping.csv  dish_metadata.parquet
src/wizard_ops/utils/: __init__.py  helpers.py  model_builder.py
tests/: test_api.py  test_data.py  test_evaluate.py  test_model.py  test_train.py
tests/performancetests/: locustfile.py  visualize_loadtest.py
tests/performancetests/stats/: loadtest_failures.csv  loadtest_stats.csv  loadtest_stats_history.csv
tests/performancetests/stats/1/: loadtest_failures.csv  loadtest_stats.csv  loadtest_stats_history.csv
tests/performancetests/stats/2/: loadtest_failures.csv  loadtest_stats.csv  loadtest_stats_history.csv
tests/performancetests/stats/3/: loadtest_failures.csv  loadtest_stats.csv  loadtest_stats_history.csv
