[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "wizard_ops"
version = "0.0.3"
description = "Food Nutrition Predictor Using ResNet18"
authors = [
  { name = "Yubaba", email = "s223190@dtu.dk" },
  { name = "Malificent", email = "s253081@dtu.dk" },
  { name = "Eleven", email = "s253471@dtu.dk"},
  { name = "Wanda", email = "s253033@dtu.dk"},
  { name = "Merlin", email = "alihaj@dtu.dk"}
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentationsx>=2.0.13",
    "datasets>=4.4.2",
    "dvc-gs>=3.0.2",
    "fastapi==0.115.6",
    "google-api-python-client>=2.188.0",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "kaggle>=1.8.3",
    "kagglehub>=0.4.0",
    "lightning>=2.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "ruff>=0.1.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "typer>=0.21.1",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "pytest==9.0.2",
]


# [tool.uv.sources]
# torch = [
#     { index = "pytorch-cpu" },
# ]
# torchvision = [
#     { index = "pytorch-cpu" },
# ]

# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]
